cmake_minimum_required(VERSION 4.1)
project(C__)

set(CMAKE_CXX_STANDARD 20)

add_executable(helloworld helloworld.cpp)
add_executable(comments comments.cpp)
add_executable(variables variables.cpp)
add_executable(multiple_variables multiple_variables.cpp)
add_executable(omit_namespace omit_namespace.cpp)
add_executable(constants constants.cpp)
add_executable(intro intro.cpp)
