cmake_minimum_required(VERSION 4.1)
project(C__)

set(CMAKE_CXX_STANDARD 20)

add_executable(helloworld helloworld.cpp)
add_executable(comments comments.cpp)
add_executable(variables variables.cpp)
add_executable(multiple_variables multiple_variables.cpp)
add_executable(omit_namespace omit_namespace.cpp)
add_executable(constants constants.cpp)
add_executable(intro intro.cpp)
add_executable(variables_example_one variables_example_one.cpp)
add_executable(calculate_area_rectangle calculate_area_rectangle.cpp)
add_executable(user_input user_input.cpp)
add_executable(caculator calculator.cpp)
add_executable(basic_data_types basic_data_types.cpp)
add_executable(Booleans Booleans.cpp)
add_executable(auto_keyword auto_keyword .cpp)